--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "type-check": "npm run type-check --workspaces"
   },
   "devDependencies": {
+    "@types/node": "^24.0.0",
     "concurrently": "^8.2.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18.0.0",
