--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,12 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@sebastians/firebase-config": "*",
+    "@sebastians/shared-types": "*",
+    "firebase": "^10.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.2",
-    "firebase": "^10.13.2",
-    "@sebastians/shared-types": "*",
-    "@sebastians/firebase-config": "*"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
