--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -20,6 +20,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "postcss.config.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
