--- a/firebase.json
+++ b/firebase.json
@@ -29,7 +29,7 @@
     },
     {
       "site": "sebastians-menu",
-      "target": "menu", 
+      "target": "menu",
       "public": "apps/menu/dist",
       "ignore": [
         "firebase.json",
@@ -58,5 +58,21 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run build"
+      ]
+    }
+  ]
 }
