--- a/apps/menu/package.json
+++ b/apps/menu/package.json
@@ -11,13 +11,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@sebastians/firebase-config": "*",
+    "@sebastians/shared-types": "*",
+    "@sebastians/ui-components": "*",
+    "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.26.2",
-    "firebase": "^10.13.2",
-    "@sebastians/shared-types": "*",
-    "@sebastians/firebase-config": "*",
-    "@sebastians/ui-components": "*"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
