--- a/package.json
+++ b/package.json
@@ -15,25 +15,22 @@
     "build:menu": "npm run build --workspace=apps/menu",
     "build:all": "npm run build:admin && npm run build:menu",
     "build:packages": "npm run build --workspace=packages/shared-types && npm run build --workspace=packages/firebase-config",
-    "deploy:admin": "firebase deploy --only hosting:admin",
     "deploy:menu": "firebase deploy --only hosting:menu",
-    "deploy:all": "firebase deploy",
+    "deploy:admin": "firebase deploy --only hosting:admin",
+    "deploy:all": "firebase deploy --only hosting",
+    "preview:menu": "firebase hosting:channel:deploy preview-menu --only hosting:menu",
+    "preview:admin": "firebase hosting:channel:deploy preview-admin --only hosting:admin",
     "clean": "npm run clean --workspaces",
     "install:all": "npm install && npm install --workspaces",
     "lint": "npm run lint --workspaces",
     "type-check": "npm run type-check --workspaces"
   },
   "devDependencies": {
-    "@types/node": "^24.0.0",
     "concurrently": "^8.2.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.7.3"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
-  },
-  "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0"
   }
 }
