--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "dev:admin": "npm run dev --workspace=apps/admin",
     "dev:menu": "npm run dev --workspace=apps/menu",
     "dev:all": "concurrently \"npm run dev:admin\" \"npm run dev:menu\"",
-    "build:admin": "npm run build --workspace=apps/admin",
-    "build:menu": "npm run build --workspace=apps/menu",
-    "build:all": "npm run build:admin && npm run build:menu",
     "build:packages": "npm run build --workspace=packages/shared-types && npm run build --workspace=packages/firebase-config",
+    "build:admin": "npm run build:packages && npm run build --workspace=apps/admin",
+    "build:menu": "npm run build:packages && npm run build --workspace=apps/menu", 
+    "build:all": "npm run build:packages && npm run build:admin && npm run build:menu",
     "deploy:menu": "firebase deploy --only hosting:menu",
     "deploy:admin": "firebase deploy --only hosting:admin",
     "deploy:all": "firebase deploy --only hosting",
