--- a/packages/firebase-config/package.json
+++ b/packages/firebase-config/package.json
@@ -1,18 +1,16 @@
 {
   "name": "@sebastians/firebase-config",
   "version": "1.0.0",
-  "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "clean": "rm -rf dist"
   },
   "dependencies": {
-    "firebase": "^10.13.2"
+    "firebase": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
-    "@types/node": "^20.0.0"
+    "typescript": "^5.7.3"
   }
 }
