--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@sebastians/shared-types",
   "version": "1.0.0",
-  "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "tsc --watch"
+    "clean": "rm -rf dist"
   },
   "devDependencies": {
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.3"
   }
 }
