--- a/firebase.json
+++ b/firebase.json
@@ -71,6 +71,10 @@
       ]
     }
   ],
+  "functions": {
+    "source": "functions",
+    "runtime": "nodejs20"
+  },
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
