--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting
+name: Deploy to Firebase
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
           node-version: '20'
           cache: 'npm'
       
-      # Clean install dependencies to fix potential Rollup issues
+      # Clean install dependencies
       - name: Clean install dependencies
         run: |
           rm -rf node_modules package-lock.json
@@ -38,16 +38,11 @@ jobs:
         run: |
           npm run build:packages
       
-      # Install Functions dependencies
+      # Install and build Functions
       - name: Install Functions dependencies
         run: |
           cd functions
           npm install
-      
-      # Build Functions
-      - name: Build Functions
-        run: |
-          cd functions
           npm run build
       
       - name: Set Development Environment
@@ -79,20 +74,28 @@ jobs:
         run: |
           npm run build:all
       
-      # Deploy everything (Functions + Hosting) together
+      # Create service account file
+      - name: Create service account file
+        run: |
+          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SEBASTIAN_CAFE }}' > $HOME/gcp-key.json
+          export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
+      
+      # Deploy to Production
       - name: Deploy to Firebase Production
         if: github.ref == 'refs/heads/main'
         run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SEBASTIAN_CAFE }}' > $HOME/gcp-key.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
           npm install -g firebase-tools
-          firebase deploy --project ${{ secrets.FIREBASE_PROJECT_ID }}
+          firebase deploy --project ${{ secrets.FIREBASE_PROJECT_ID }} --non-interactive
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
       
-      # Deploy to Dev Environment
-      - name: Deploy to Firebase Dev
-        if: github.ref == 'refs/heads/dev'  
+      # Deploy to Development
+      - name: Deploy to Firebase Development
+        if: github.ref == 'refs/heads/dev'
         run: |
-          echo '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SEBASTIAN_CAFE }}' > $HOME/gcp-key.json
           export GOOGLE_APPLICATION_CREDENTIALS=$HOME/gcp-key.json
           npm install -g firebase-tools
-          firebase deploy --project ${{ secrets.FIREBASE_PROJECT_ID }}
+          firebase deploy --project ${{ secrets.FIREBASE_PROJECT_ID }} --non-interactive
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
