--- a/functions/package.json
+++ b/functions/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@google-cloud/translate": "^9.1.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
+    "@types/sharp": "^0.32.0",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^5.7.3"
   },
